--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,13 @@
 .lead {
-display: flex;
-flex-direction: column;
-align-items: center;
+  max-width: 984px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 56px 0 0;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    margin: 48px 0 0;
+	}
 }
