--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,21 @@
 .header {
+  width: 100%;
   min-height: 52px;
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  margin: 0 48px;
+  padding: 0 48px;
   background-color: #2A2C2F;
 }
 
 @media screen and (max-width: 1023px) {
 	.header {
-		margin: 0 24px;
+		padding: 0 24px;
 	}
 }
 
 @media screen and (max-width: 767px) {
 	.header {
-		margin: 0 16px;
+		padding: 0 16px;
 	}
 }
