--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,3 +1,19 @@
 .lead__subtitle {
+  max-width: 640px;
+  line-height: 1.2;
+  font-size: 30px;
+  font-weight: 400;
   color: #FFFFFF;
+  text-align: center;
+  margin: 32px 0 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    max-width: 288px;
+    line-height: 1.25;
+    font-size: 16px;
+    margin: 16px 0 0;
+	}
 }
