--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,8 @@
 .page {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 28px 0 0;
   font-family: 'Inter', sans-serif;
   background-color: #2A2C2F;
