--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,7 +3,7 @@
   line-height: 1.2;
   font-size: 30px;
   font-weight: 400;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   margin: 32px 0 0;
   padding: 0;
