--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+  src: url(Inter-Bold.woff) format('woff'),
+  url(Inter-Bold.woff2) format('woff2');
+  font-family: 'Inter';
+  font-weight: 700;
+}
+
+@font-face {
   src: url(Inter-Black.woff) format('woff'),
   url(Inter-Black.woff2) format('woff2');
   font-family: 'Inter';
