--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,4 +1,24 @@
 .photo-grid {
-  display: grid;
+  max-width: 1184px;
   margin: 92px 0 0 0;
+}
+
+@media screen and (max-width: 1152px) {
+  .photo-grid {
+    max-width: 928px;
+	}
+}
+
+@media screen and (max-width: 896px) {
+  .photo-grid {
+    max-width: 720px;
+    margin-top: 88px;
+	}
+}
+
+@media screen and (max-width: 544px) {
+  .photo-grid {
+    max-width: 288px;
+    margin-top: 64px;
+	}
 }
