--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,8 @@
 @import url(../blocks/intro/__list-item/_bold/intro__list-item_bold.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__items/photo-grid__items.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 @import url(../blocks/places/places.css);
 
