--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,3 +1,17 @@
 .cover__title {
-  
+  max-width: 560px;
+  line-height: 1.056;
+  font-size: 72px;
+  font-weight: 900;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  margin: 0;
+}
+
+@media screen and (max-width: 544px) {
+  .cover__title {
+    line-height: 1.094;
+    font-size: 32px;
+	}
 }
