--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,14 +1,14 @@
 .header__lang-link {
-  line-height: 28px;
+  line-height: 1.17px;
   font-size: 24px;
   font-weight: 400;
-  color: #FFFFFF;
+  color: #fff;
   text-decoration: none;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 544px) {
   .header__lang-link {
-    line-height: 20px;
+    line-height: 1.115;
     font-size: 18px;
 	}
 }
