--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,7 +4,19 @@
   font-size: 10px;
   font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: 1.35px;
-  color: #FFFFFF;
+  letter-spacing: 1.5px;
+  color: #fff;
   margin: 8px 0 0;
+}
+
+@media screen and (max-width: 930px) {
+  .lead__caption {
+    padding-left: 24px;
+	}
+}
+
+@media screen and (max-width: 544px) {
+  .lead__caption {
+    padding-left: 16px;
+	}
 }
