--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,4 +1,5 @@
 .lead {
+  width: 100%;
   max-width: 984px;
   display: flex;
   flex-direction: column;
@@ -6,8 +7,15 @@
   margin: 56px 0 0;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1152px) {
   .lead {
-    margin: 48px 0 0;
+    max-width: 928px;
+    margin-top: 48px;
+	}
+}
+
+@media screen and (max-width: 930px) {
+  .lead {
+    max-width: none;
 	}
 }
