--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,5 +6,10 @@
   padding: 28px 0 0;
   font-family: 'Inter', sans-serif;
   background-color: #2A2C2F;
-  ;
+}
+
+@media screen and (max-width: 544px) {
+  .page {
+    padding-top: 16px;
+	}
 }
