--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,14 +1,13 @@
 .lead__image {
   width: 100%;
-  /* height: 615px; */
-  height: calc((100vw - 148px * 2) / 1.6);
+  height: calc(984px / 1.6);
   background: url(../../../images/lead-map.svg) no-repeat center 14.5% / 95% 60%, url(../../../images/lead.jpg) 0 0/cover;
   margin: 64px 0 0;
 }
 
 @media screen and (max-width: 1152px) {
   .lead__image {
-    height: calc((100vw - 48px * 2) / 1.6);
+    height: calc(928 / 1.6);
     margin-top: 56px;
 	}
 }
