--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,6 +6,13 @@
   padding: 28px 0 0;
   font-family: 'Inter', sans-serif;
   background-color: #2A2C2F;
+  /* Сглаживание, подгонка, рендеринг шрифтов: */
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%; 
+  text-rendering: optimizeLegibility;
 }
 
 @media screen and (max-width: 544px) {
