--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,6 @@
 .place__image {
   grid-area: image;
+  max-width: 460px;
 }
 
 @media screen and (max-width: 1152px) {
@@ -8,13 +9,19 @@
 	}
 }
 
-@media screen and (max-width: 896px) {
+@media screen and (max-width: 948px) {
   .place__image {
     max-width: 340px;
 	}
 }
 
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 748px) {
+  .place__image {
+    max-width: 250px;
+	}
+}
+
+@media screen and (max-width: 648px) {
   .place__image {
     width: 100%;
     max-width: 320px;
