--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,6 +2,10 @@
   line-height: 1.22;
   font-size: 18px;
   font-weight: 400;
-  color: #ffffff;
-  margin: 0 0 0;
+  color: #fff;
+  margin: 0;
+}
+
+.place__link:hover {
+  opacity: 88%;
 }
