--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,11 +2,11 @@
   line-height: 1.63;
   font-size: 18px;
   font-weight: 400;
-  color: #ffffff;
+  color: #fff;
   margin: 0;
 }
 
-@media screen and (max-width: 896px) {
+@media screen and (max-width: 948px) {
   .place__paragraph {
     line-height: 1.63;
     font-size: 16px;
