--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,6 +8,12 @@
   padding: 0 0 24px 0;
 }
 
+@media screen and (min-width: 1280px) {
+  .footer {
+    max-width: 1184px;
+	}
+}
+
 @media screen and (max-width: 896px) {
   .footer {
     max-width: calc(100vw - 24px * 2);
@@ -19,7 +25,6 @@
   .footer {
     max-width: calc(100vw - 16px * 2);
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
     row-gap: 48px;
     margin-top: 64px;
