--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,13 +1,14 @@
 .intro {
   width: 100%;
-  max-width: 690px;
+  max-width: 710px;
   margin: 92px 0 0;
-  padding-right: calc(984px - 690px);
+  align-self:flex-start;
+  padding-left: calc((100vw - 984px)/2);
 }
 
 @media screen and (max-width: 1152px) {
   .intro {
-    padding-right: calc(928px - 690px);
+    padding-left: calc((100vw - 928px)/2);
 	}
 }
 
@@ -15,7 +16,7 @@
   .intro {
     max-width: 720px;
     margin-top: 88px;
-    padding-right: 0;
+    padding-left: 24px;
 	}
 }
 
@@ -27,7 +28,8 @@
 
 @media screen and (max-width: 544px) {
   .intro {
-    max-width: 288px;
-    margin-top: 64px;
+    max-width: 292px;
+    margin-top: 62px;
+    padding-left: 16px;
 	}
 }
