--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,11 +2,9 @@
   max-width: 1184px;
   width: 100%;
   min-height: 740px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 32px;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
   background-image: url(../../images/cover.jpg);
   background-size: cover;
   position: relative;
@@ -18,6 +16,7 @@
   position: absolute;
   background-color: #2A2C2F;
   opacity: 30%;
+  transition: opacity .5s;
   width: 100%;
   top: 0;
   left: 0;
@@ -25,13 +24,20 @@
 }
 
 .cover:hover::before {
-  opacity: 88%;
+  opacity: 80%;
 }
 
 @media screen and (max-width: 1183px) {
   .cover {
-    max-width: none;
+    max-width: 100%;
     min-height: 62.5vw;
+    margin-top: 96px;
+	}
+}
+
+@media screen and (max-width: 544px) {
+  .cover {
+    margin-top: 66px;
 	}
 }
 
