--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,6 +9,12 @@
   padding: 0 48px;
 }
 
+@media screen and (min-width: 1280px) {
+  .header {
+    max-width: calc(1184px + 48px * 2);
+	}
+}
+
 @media screen and (max-width: 896px) {
 	.header {
     padding-left: 24px;
