--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,4 +1,8 @@
 .intro__list {
+  line-height: 1.5;
+  font-size: 12px;
+  font-weight: 700;
+  color: #fff;
   list-style-type: none;
   margin: 33px 0 0;
   padding: 0;
