--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,5 @@
 .place__link {
+  display: block;
   line-height: 1.22;
   font-size: 18px;
   font-weight: 400;
@@ -7,5 +8,6 @@
 }
 
 .place__link:hover {
-  opacity: 88%;
+  opacity: 80%;
+  transition: opacity .5s;
 }
